# vscode_cpp_cmake_example

./: .gitignore  CMakeLists.txt  ExampleFunc.cpp  ExampleFunc.hpp  Jenkinsfile  README.md  compile_commands.json  conanfile.py  conanfile.txt  main.cpp  readme.md
test/: CMakeLists.txt  ExampleFunc_test.cpp
